--- a/index.css
+++ b/index.css
@@ -368,3 +368,48 @@ ul.social-footer2 li a {
     -o-transition: all 250ms ease-in-out 0s;
     transition: all 250ms ease-in-out 0s;
 }
+
+
+/* /////////under const/////////// */
+
+.wrapper {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.construction {
+    font-family: Ubuntu;
+    background: orange;
+    border-radius: 12px;
+    border: 5px solid #343434;
+    text-align: center;
+    margin: 3em auto;
+    max-width: 30em;
+    padding: 2em;
+    position: relative;
+}
+
+.construction p {
+    font-size: 3em;
+}
+
+.construction span {
+    position: absolute;
+    top: -0.1em;
+    right: 0.25em;
+    font-size: 2em;
+    cursor: pointer;
+    color: gray;
+    border: 10px solid #343434;
+    border-radius: 0.25em;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.construction span:hover {
+    color: #000000;
+}
